--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1647,6 +1647,11 @@ table.campaign td,
     border-left:1px solid #CCC;
     white-space:nowrap;
 }
+#crm-container .action-item-wrap {
+    padding:0px 5px;
+    border-left:1px solid #CCC;
+    white-space:normal;
+}
 #crm-container .action-item-first { border-left:none; /* last action item should not have right hand border */}
 
 #crm-container .panel {
