--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -534,7 +534,7 @@ div.spacer,
 #crm-container .form-layout td.view-value, 
 #crm-container .form-layout-compressed td.view-value {
     text-align: left;
-    padding: 0.5em 0em 0em 0.5em;
+    padding: 4px;
     border: 0px none;
     vertical-align: top;
 }
