--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1709,12 +1709,13 @@ table.campaign td,
 
 /*Styles for Context menu */
 
-#crm-container .contextMenu {
+#crm-container .contextMenu,
+.crm-contextmenu {
     position   : absolute;
     z-index    : 9999;
     border     : none;
     padding    : 5px 0 0 0px;
-    margin     : 0px;
+    margin     : 0px 0px 0px -20px;
     display    : none;
     width      : 132px;
     background:transparent url(../i/dropdown-pointer.gif) no-repeat scroll 10px 1px;
@@ -1724,14 +1725,16 @@ table.campaign td,
     margin     : -95px 0px 0px -275px;
 }
 
-#crm-container .contextMenu li {
+#crm-container .contextMenu li,
+.crm-contextmenu li {
     background-image: none;
     list-style : none;
     padding    : 2px;
     margin     : 0px;
 }
 
-#crm-container .contextMenu a {
+#crm-container .contextMenu a,
+.crm-contextmenu a {
     text-decoration     : none;
     display             : block;
     line-height         : 20px;
@@ -3061,22 +3064,27 @@ div#crm-toolTip
 
 /* theming for panel and context menus */
 #crm-container td ul.panel li,
-#crm-container .contextMenu li {
+#crm-container .contextMenu li,
+.crm-contextmenu li {
     background-color:#2F2F2E;
 }
 
 #crm-container .panel li a, 
 #crm-container .contextMenu a,
-#crm-container .contextMenu a:link {
+.crm-contextmenu a,
+#crm-container .contextMenu a:link,
+.crm-contextmenu a:link {
     color:#DFDFDF;
 }
 
 #crm-container .panel li a:hover,
 #crm-container .crm-participant-list-inner li a:hover,
 #crm-container .crm-event-links-list-inner li a:hover,
-#crm-container .contextMenu li a:hover {
+#crm-container .contextMenu li a:hover,
+.crm-contextmenu li a:hover {
     color: #3e3e3e;
     background-color: #F5F6F1;
+    text-decoration: none;
 }
 
 /* Special styling for specific form buttons */
