--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2864,10 +2864,7 @@ tbody.scrollContent tr.alternateRow {
     font-weight:normal;
 }
 
-.disabled {
-    #commenting since it is not working in FF / Chrome / Safari
-    #text-decoration:line-through;
-}
+.disabled { text-decoration:line-through; }
 
 #crm-container table.selector td {
     border-right:1px dotted #DDDDDD;
