CRM-6425 revert to fix Create New button width issue

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2203,6 +2203,7 @@ div.grippie {
         }
 
 #crm-container a.button,
+#crm-create-new-link,
 #crm-participant-link,
 #crm-event-links-link,
 #crm-contact-actions-link,
