--- a/css/joomla.css
+++ b/css/joomla.css
@@ -427,6 +427,7 @@ table {
   padding: 0 0 1.5em 0;
 }
 .block {
+  min-height: 25px;
   border-bottom: 1px solid #bbb;
   padding-bottom: 0.75em;
   margin-bottom: 1.5em;
