--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2109,6 +2109,10 @@ div.grippie {
     position:relative;
     margin:-2em 0.5em 0 0;
 }
+    /* For Joomla, margin 0 works correctly */
+    #crm-container table#crm-content div#printer-friendly {
+        margin: 0;
+    }
 
 #crm-container .order-icon {
     height: 15px;
