--- a/css/joomla.css
+++ b/css/joomla.css
@@ -497,3 +497,6 @@ ul#civicrm-menu li#crm-qsearch {
 #crm-container .footer {
 	font-size: 1em;
 }
+.ac_results .ac_odd {
+	background-color: #444;
+}
