changed width of create new, CRM-6520

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2146,6 +2146,10 @@ div.grippie {
     padding:4px;
 }
 
+.crm-create-new-list-inner {
+  width: 124px!important;			   
+}
+
 /* crm button style */
 
 #crm-container .crm-submit-buttons,
