--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1992,6 +1992,10 @@ div.grippie {
     float: right;
 }
 
+#crm-container span.crm-case-summary-label {
+	font-weight: bold;
+}
+
 #crm-container .separator {
     border-bottom  : solid 2px #ccc;
 }
