#minor css fix for create new

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2288,7 +2288,7 @@ div.grippie {
 
 #crm-event-links-link {width:90px;}
 #crm-participant-link { width:120px;}
-
+#crm-create-new-list{width:124px;}
 .clear { clear: both; }
 
 #crm-contact-actions-list .icon { background-image:url("../i/icons/jquery-ui-FFFFFF.png"); }
