--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2958,6 +2958,10 @@ table.crm-info-panel td.label {
     margin: 0;
 }
 
+.crm-results-block {
+    position:relative;
+}
+
 /* accordion-colors */
 
 .crm-form-block { 
