--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2345,7 +2345,7 @@ div.grippie {
         width:495px; /* fixes ie bug  caused by above*/
         }
 
-#crm-create-new-link {
+#crm-create-new-link É{
     width:95px;
     }
 
@@ -2463,10 +2463,8 @@ span.icon {
 
 .crm-accordion-header {
     background-color:#32414f; 
-    -moz-border-radius: 4px; 
     padding:4px 8px;
     cursor: pointer;
-    margin-bottom:4px;
 }
 
 
@@ -2527,6 +2525,42 @@ span.icon {
 	font-weight: normal;
 	padding-left: 0px;	
 	}
+
+.crm-accordion-wrapper {
+    margin-bottom:4px;
+    }
+
+.crm-accordion-closed .crm-accordion-header {
+    -moz-border-radius: 4px; 
+    -webkit-border-radius: 4px;   
+    -khtml-border-radius: 4px; 
+    border-radius:4px; 
+    }
+
+.crm-accordion-open .crm-accordion-header {
+    -moz-border-radius: 4px 4px 0px 0px; 
+    -webkit-border-radius: 4px 4px 0px 0px;   
+    -khtml-border-radius: 4px 4px 0px 0px; 
+    border-radius:4px 4px 0px 0px;
+    }
+
+.crm-accordion-open .crm-accordion-body {
+    -moz-border-radius: 0px 0px 4px 4px; 
+    -webkit-border-radius: 0px 0px 4px 4px;   
+    -khtml-border-radius: 0px 0px 4px 4px; 
+    border-radius:0px 0px 4px 4px;
+    border:1px solid #70716B;
+    border-top:0px;
+    padding: 4px; 
+    }
+/* ==================================================================================== */
+/* ! hack to force pages with master accordions 
+     to work, needs updating of tpl files   */
+/* ==================================================================================== */
+#crm-container .crm-master-accordion-header+.crm-accordion-body  { 
+    border:none;
+    padding: 0px;
+    }
 
 
 /* civicrm admin menu */
@@ -2959,6 +2993,10 @@ table.crm-info-panel td.label {
     margin: 0;
 }
 
+.crm-results-block {
+    position:relative;
+}
+
 /* accordion-colors */
 
 .crm-form-block { 
@@ -3015,7 +3053,7 @@ del,
 #crm-container input.form-submit-inline
 {-moz-border-radius: 3px; -webkit-border-radius: 3px;   -khtml-border-radius: 3px; border-radius:3px; }
 
-#crm-container .crm-accordion-header,
+
 #crm-container div.status,
 div.m ul#civicrm-menu,
 #crm-container #restmsg,
@@ -3035,6 +3073,7 @@ div.m ul#civicrm-menu,
 #crm-container div.messages,
 div#crm-toolTip
 {-moz-border-radius: 4px; -webkit-border-radius: 4px;   -khtml-border-radius: 4px; border-radius:4px; }
+
 
 /* fix autocomplete colors/styles */
 
