--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2536,14 +2536,14 @@ span.icon {
     border-radius:4px; 
     }
 
-.crm-accordion-open .crm-accordion-header {
+.crm-accordion-open>.crm-accordion-header {
     -moz-border-radius: 4px 4px 0px 0px; 
     -webkit-border-radius: 4px 4px 0px 0px;   
     -khtml-border-radius: 4px 4px 0px 0px; 
     border-radius:4px 4px 0px 0px;
     }
 
-.crm-accordion-open .crm-accordion-body {
+.crm-accordion-open>.crm-accordion-body {
     -moz-border-radius: 0px 0px 4px 4px; 
     -webkit-border-radius: 0px 0px 4px 4px;   
     -khtml-border-radius: 0px 0px 4px 4px; 
@@ -3155,16 +3155,6 @@ div#crm-toolTip
 #crm-container span.crm-button_qf_Main_upload input {
     font-size: 1.2em;
 }
-
-
-
-
-
-
-
-
-
-
 
 
 /*
