--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -731,7 +731,14 @@ div.spacer,
 /* Following styles are used to remove the white bullets from the Garland Theme */
 div.block-civicrm li, #crm-container ul li, #crm-container ul.treeview li {
     background-image: none;
+} 
+
+/* But allow them for the help at the top of forms
+*/
+#crm-container #help ul li {
+    background-image: url(menu-leaf.png);
 }
+
 
 /* Styles from jsTree.com menu. Copied here since Drupal styles over-ride otherwise. */
 /* DOTS */
