#CRM-6723 fix errant character

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2352,7 +2352,7 @@ div.grippie {
         width:495px; /* fixes ie bug  caused by above*/
         }
 
-#crm-create-new-link É{
+#crm-create-new-link {
     width:95px;
     }
 
