--- a/xml/schema/Report/Instance.xml
+++ b/xml/schema/Report/Instance.xml
@@ -47,6 +47,22 @@
       <add>2.2</add>
   </field>
   <field>
+      <name>name</name>
+      <type>varchar</type>
+      <length>255</length>
+      <required>true</required>
+      <comment>when combined with report_id/template uniquely identifies the instance</comment>
+      <add>3.2</add>
+  </field>
+  <field>
+      <name>args</name>
+      <type>varchar</type>
+      <length>255</length>
+      <required>true</required>
+      <comment>arguments that are passed in the url when invoking the instance</comment>
+      <add>3.2</add>
+  </field>
+  <field>
        <name>description</name>
        <type>varchar</type>
        <length>255</length>
