// CRM-6865, ui fixes

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2808,7 +2808,24 @@ div#civicrm-dashboard form {
 
 
 /*  DataTables fixes */
+#crm-container .dataTables_length {
+    float:none;
+    padding-bottom:5px;
+}
 
+#crm-container .crm-datatable-pager-top .dataTables_length {
+float:left;
+}
+
+#crm-container .crm-datatable-pager-bottom {
+    padding-top:5px;
+    padding-bottom:20px;
+}
+
+#crm-container .crm-datatable-pager-top {
+    padding-top:5px;
+    padding-bottom:5px;
+}
 /* Date plugin */
 
 #crm-container input.dateplugin {
