--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2805,27 +2805,9 @@ div#civicrm-dashboard form {
 #Tag .tree .collapsable .hit,
 #Tag .tree .expandable .hit { padding-left:16px; }
 
-
-
 /*  DataTables fixes */
-#crm-container .dataTables_length {
-    float:none;
-    padding-bottom:5px;
-}
+#crm-container .crm-datatable-pager { padding-top:10px; padding-bottom:25px; }
 
-#crm-container .crm-datatable-pager-top .dataTables_length {
-float:left;
-}
-
-#crm-container .crm-datatable-pager-bottom {
-    padding-top:5px;
-    padding-bottom:20px;
-}
-
-#crm-container .crm-datatable-pager-top {
-    padding-top:5px;
-    padding-bottom:5px;
-}
 /* Date plugin */
 
 #crm-container input.dateplugin {
