--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2852,6 +2852,21 @@ div#civicrm-dashboard form {
     border-color:none;
 }	
 
+/* ui dialog state */ 
+.ui-state-hover, 
+.ui-widget-content  
+.ui-state-hover, 
+.ui-widget-header 
+.ui-state-hover, 
+.ui-state-focus, 
+.ui-widget-content .ui-state-focus, 
+.ui-widget-header .ui-state-focus { 
+border: 0px solid #70716b; 
+background: #484e4c url("../packages/jquery/jquery-ui-1.8.5/css/custom-theme/images/ui-bg_flat_40_70716b_40x100.png") 50% 50% repeat-x; 
+font-weight: normal; 
+color: #f5f6f1; 
+}
+
 #Tag .tree .collapsable .hit,
 #Tag .tree .expandable .hit { padding-left:16px; }
 
